# ds-u2-actividad-1b-listasenlazadassimples-CarlosVargas740

./: BUILD.md  CMakeLists.txt  README.md
arduino/simulador_arduino/: simulador_arduino.ino
docs/: Doxyfile.in  README.md  mainpage.dox
include/: ListaGestion.h  ListaSensor.h  SensorBase.h  SensorPresion.h  SensorTemperatura.h  SensorVibracion.h  SimuladorSerial.h
src/: main.cpp
